# voe_crew_blog

./: README.md  pyproject.toml  training_data.pkl
src/crew_voe_blog/: crew.py  main.py
src/crew_voe_blog/config/: agents.yaml  tasks.yaml
