[tool.poetry]
name = "crew_voe_blog"
version = "0.1.0"
description = "crew_voe_blog using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
crew_voe_blog = "crew_voe_blog.main:run"
train = "crew_voe_blog.main:train"
replay = "crew_voe_blog.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
